--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -63,9 +63,13 @@ body{
 .icon-switch:before {
   content: "\e9b6";
 }
+.icon-cross:before {
+  content: "\ea0f";
+}
 .icon-arrow-up2:before {
   content: "\ea3a";
 }
+
 
 
 
