修改部分文字描述，添加移动端

--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -10,6 +10,11 @@ body{
 }
 
 
+
+[v-cloak] {
+  display: none;
+}
+
 @font-face {
   font-family: 'icomoon';
   src:  url(../fonts/icomoon.eot?2p0rzg);
